增加设备维修流程，非正常出货增加报表

--- a/EmpInfo/Views/Account/Login.cshtml
+++ b/EmpInfo/Views/Account/Login.cshtml
@@ -380,9 +380,9 @@
                     <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
                     此系统支持安卓、苹果手机或平板自带浏览器以及Chrome、IE10+桌面浏览器；登陆或操作如有问题可联系系统管理员：李逸焊（3006；liyihan.ic@truly.com.cn)
                 </p>
-                <p class="text-info small">
+                @*<p class="text-info small">
                     <i class="fa fa-android"></i> 安卓APP版本：<a href="@ViewData["appUrl"]" target="_blank">点此下载</a>
-                </p>
+                </p>*@
                 <p class="text-danger small">
                     <i class="fa fa-info-circle"></i> 关注并绑定[信利e家]微信公众号后，可在微信端免密登陆此系统
                 </p>
